app-consoleurlistiov2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-consoleurlistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-consoleurlistio

  template:
    metadata:
      labels:
        app: app-consoleurlistio
        version: v2
    spec:
      containers:
      - name: app-consoleurlistio
        image: weeus03devacraks99.azurecr.io/appconsoleurl-imag:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-consoleurlistio
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: app-consoleurlistio
