appconsoleurlistioDestinationRules1-to-2.yml
kind: DestinationRule                                                                                        
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: app-consoleurlistio                                
  namespace: appconsolurlistio
spec:
  host: app-consoleurlistio                                                                         
  subsets:
    - labels:                                                                                                
        version: v1                                                                                      
      name: v1
    - labels:
        version: v2
      name: v2
